--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       <button id="show-html">Show Html</button>
       <button id="show-page">Show page</button>
     </div>
-    <iframe id="result-page" class="display-area"></iframe>
-    <textarea id="result-html" .class="display-area" type="text"></textarea>
+    <iframe id="result-page" class="display-area" style="display: none;"></iframe>
+    <textarea id="result-html" class="display-area" type="text"></textarea>
   </div>
-  <script src="index.js" type="module"></script>
+  <script src="src/index.js" type="module"></script>
 </body>
 </html>
