Refactored and created new style file

--- a/index.html
+++ b/index.html
@@ -1,47 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>MD TO HTML</title>
-</head>
-<body>
-
-  <style>
-    #container{
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      height: 90vh;
-      align-items: center;
-    }
-    #controls{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    button{
-      padding: 5px;
-      width: 10vw;
-      margin: 10px 0px;
-    }
-    .display-area{
-      height: 100%;
-      width: 42vw;
-      margin: 5px 5px;
-    }
-  </style>
-
-  <div id="container">
-    <textarea id="text-input" class="display-area"></textarea>
-    <div id="controls">
-      <button id="from-text">From Text</button>
-      <button id="from-link">From Link</button>
-      <button id="show-html">Show Html</button>
-      <button id="show-page">Show page</button>
+  <head>
+    <title>MD TO HTML</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <h2>Markdown to Html Transpiler</h2>
+    <div id="container">
+      <textarea id="text-input" class="display-area"></textarea>
+      <div id="controls">
+        <button id="from-text" class="button button-red">From Text</button>
+        <button id="from-link" class="button button-red">From Link</button>
+        <button id="show-html" class="button button-blue">Show Html</button>
+        <button id="show-page" class="button button-blue">Show page</button>
+      </div>
+      <iframe
+        id="result-page"
+        class="display-area"
+        style="display: none"
+      ></iframe>
+      <textarea id="result-html" class="display-area" type="text"></textarea>
     </div>
-    <iframe id="result-page" class="display-area" style="display: none;"></iframe>
-    <textarea id="result-html" class="display-area" type="text"></textarea>
-  </div>
-  <script src="src/index.js" type="module"></script>
-</body>
+    <script src="src/index.js" type="module"></script>
+  </body>
 </html>
-
