--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>MD TO HTML</title>
     <link rel="stylesheet" href="index.css" />
+    <!-- <link rel="stylesheet" href="default.min.css"> -->
   </head>
   <body>
     <h2>Markdown to Html Transpiler</h2>
@@ -22,5 +23,7 @@
       <textarea id="result-html" class="display-area" type="text"></textarea>
     </div>
     <script src="src/index.js" type="module"></script>
+    <!-- <script src="src/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script> -->
   </body>
 </html>
